# Forecasting_ML_microservice

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.py
download_datasets/: main.py  pyproject.toml
download_datasets/tests/: test_download_datasets.py
serve/: Dockerfile  direct_kube_deploy.yaml  docker-compose.yml  main.py  pyproject.toml
serve/src/: app.py  main.py
serve/src/helpers/: paths.py  requests.py
serve/src/registry/mlflow/: handler.py  loader.py
serve/tests/: test_app.py  test_config.py  test_mlflow_handler.py  test_mlflow_loader.py  test_requests.py
train/: activate_env.sh  pyproject.toml  test_forecast_inference.py  train.ipynb  train_forecasting_basic.py
train/config/: paths.py
train/src/: train_forecasting_basic.py
train/src/tools/: plotting.py
train/tests/: test_plotting.py  test_train_forecasting_basic.py
train/tools/: plotting.py
