[project]
name = "serve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-cache>=0.1.0",
    "mlflow>=2.21.3",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "prophet>=1.1.6",
    "pydantic>=2.11.3",
    "uvicorn[standard]>=0.34.1",
]
