[project]
name = "serve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-cache>=0.1.0",
    "httpx>=0.28.1",
    "mlflow>=2.22.0",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "prophet>=1.1.6",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "uvicorn[standard]>=0.34.2",
]
