[project]
name = "train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "kaggle>=1.7.4.2",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.3",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "prophet>=1.1.6",
]
