[project]
name = "train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.2",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.3",
    "pandas>=2.2.3",
    "path>=17.1.0",
    "pip>=25.0.1",
    "plotly>=6.0.1",
    "prophet>=1.1.6",
    "ray>=2.44.1",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
]
