[project]
name = "train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "matplotlib>=3.10.3",
    "mlflow>=2.22.0",
    "pandas>=2.2.3",
    "path>=17.1.0",
    "pip>=25.1.1",
    "plotly>=6.1.1",
    "prophet>=1.1.6",
    "pytest>=8.3.5",
    "ray[default]>=2.46.0",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
]
